--- a/app/views/pages/dashboard.html.slim
+++ b/app/views/pages/dashboard.html.slim
@@ -11,7 +11,7 @@
           ="Add new host"
           input type="hidden" name="utf8" value="%E2%9C%93"
           input name="host[name]" type="hidden"
-          input name="host[domain]" id="host_domain" type="text" size="40" required=true
+          input name="host[domain]" id="host_domain" type="url" size="40" required=true value="http://"
           input name="host[prot]" type="hidden" value="http"
           input name="host[monitor_status]" type="hidden" value="0"
           input name="host[last_status]" type="hidden"
